--- a/Group_work/index.html
+++ b/Group_work/index.html
@@ -6,6 +6,14 @@
 		<title>IceCream</title>
 	</head>
 	<body>
-
+		<header>
+			<ul>
+				<li>Home</li>
+				<li>About us</li>
+				<li>How it's made</li>
+				<li>Our products</li>
+				<li>Contact</li>
+			</ul>
+		</header>
 	</body>
 </html>
