the main page working 1.1

--- a/Group_work/index.html
+++ b/Group_work/index.html
@@ -6,14 +6,43 @@
 		<title>IceCream</title>
 	</head>
 	<body>
-		<header>
-			<ul>
-				<li>Home</li>
-				<li>About us</li>
-				<li>How it's made</li>
-				<li>Our products</li>
-				<li>Contact</li>
-			</ul>
-		</header>
+		<div>
+			<header>
+				<img src="img/logo 1.png">
+				<ul>
+					<li>Home</li>
+					<li>About us</li>
+					<li>How it's made</li>
+					<li>Our products</li>
+					<li>Contact</li>
+				</ul>
+				<button>Buy now</button> 
+			</header>
+			<div>
+				<p>ice cream made with
+				<span>passion</span></p>
+				<button>Products</button>
+				<button>How it’s made?</button>
+				<div>
+					<p>cafes</p>
+					<p>16</p>
+					<div class="circle"></div>
+				</div>
+				<div>
+					<p>food trucks</p>
+					<p>23</p>
+					<div class="circle circle_two"></div>
+				</div>
+				<img src="img/Ellipse 3.png">
+				<img src="img/slider-pic7 1.png">
+				<img src="img/slider-pic5 1.png">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+				<img src="img/arrow-right 3.png">
+				<img src="img/slider-pic4 1.png">
+			</div>
+
+		</div>
+
+
 	</body>
 </html>
