the main page working 1.2

--- a/Group_work/index.html
+++ b/Group_work/index.html
@@ -40,9 +40,22 @@
 				<img src="img/arrow-right 3.png">
 				<img src="img/slider-pic4 1.png">
 			</div>
-
 		</div>
-
+		<div>
+			<div>
+				<p>100% natural</p>
+				<p>products</p>
+			</div>
+			<div>
+				<p>. . .</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+				<p>ice cream</p>
+				<img src="img/home-pic1.png">
+				<img src="img/arrow-right 4.png">
+				<div></div>
+			</div>	
+		</div>
+		
 
 	</body>
 </html>
