the main page working 1.3

--- a/Group_work/index.html
+++ b/Group_work/index.html
@@ -1,63 +1,63 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>IceCream</title>
-	</head>
-	<body>
-		<div class="main_page">
-			<header class="header">
-				<img class="logo_img" src="img/logo 1.png">
-				<nav class="navigation">
-					<ul>
-						<li class="li_home">Home</li>
-						<li class="li_about_us">About us</li>
-						<li class="li_making">How it's made</li>
-						<li class="li_products">Our products</li>
-						<li class="li_contact">Contact</li>
-					</ul>
-				</nav>
-				<button class="button_header">Buy now</button> 
-			</header>
-			<div class="main_content">
-				<p class="">ice cream made with
-				<span class="passion">passion</span></p>
-				<button class="button_main_content_products">Products</button>
-				<button class="button_main_content_making">How it’s made?</button>
-				<div>
-					<p class="p_cafes">cafes</p>
-					<p class="p_16">16</p>
-					<div class="circle circle_first"></div>
-				</div>
-				<div>
-					<p class="p_food_trucks">food trucks</p>
-					<p class="p_23">23</p>
-					<div class="circle circle_second"></div>
-				</div>
-				<img class="main_content_big_ellipse" src="img/Ellipse 3.png">
-				<img class="main_content_ice_cream_img" src="img/slider-pic7 1.png">
-				<img class="main_content_milk_img" src="img/slider-pic5 1.png">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-				<img class="main_content_arrow_img" src="img/arrow-right 3.png">
-				<img class="main_content_girl_img" src="img/slider-pic4 1.png">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>IceCream</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,500;0,700;1,500&family=Titan+One&display=swap" rel="stylesheet">
+</head>
+<body>
+	<div class="main_page">
+		<header class="header">
+			<img class="logo_img" src="img/logo 1.png">
+			<nav class="navigation">
+				<ul>
+					<a href="#"><li class="li_home">Home</li></a>
+					<a href="#"><li class="li_about_us">About us</li></a>
+					<a href="#"><li class="li_making">How it's made</li></a>
+					<a href="#"><li class="li_products">Our products</li></a>
+					<a href="#"><li class="li_contact">Contact</li></a>
+				</ul>
+			</nav>
+			<a href="#"><div class="button_header"><span class="button_header_text">Buy now ></span></div></a> 
+		</header>
+		<div class="main_content">
+			<p class="ice_cream_made_with">ice cream made with<span class="passion"><br>passion</span></p>
+			<a href="#"><div class="button_main_content_products"><span class="Products">Products</span></div></a>
+			<a href="#"><div class="button_main_content_making"><span class="How_its_made">How it’s made?</span></div></a>
+			<div class="div_cafes">
+                <div class="circle"></div>
+				<p class="p_16">16</p>
+                <p class="p_cafes">cafes</p>
 			</div>
+			<div class="div_food_trucks">
+                <div class="circle circle_second"></div>
+				<p class="p_23">23</p>
+				<p class="p_food_trucks">food trucks</p>
+			</div>
+			<img class="main_content_big_ellipse" src="img/Ellipse 3.png">
+			<img class="main_content_ice_cream_img" src="img/slider-pic7 1.png">
+			<img class="main_content_milk_img" src="img/slider-pic5 1.png">
+			<p class="text_Lorem_ipsum_dolor">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+			<<a href="#"><img class="main_content_arrow_img" src="img/arrow-right 3.png"></a>
+			<img class="main_content_girl_img" src="img/slider-pic4 1.png">
+		</div>
+	</div>
+	<div>
+		<div>
+			<p>100% natural</p>
+			<p>products</p>
 		</div>
 		<div>
-			<div>
-				<p>100% natural</p>
-				<p>products</p>
-			</div>
-			<div>
-				<p>. . .</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-				<p>ice cream</p>
-				<img src="img/home-pic1.png">
-				<img src="img/arrow-right 4.png">
-				<div></div>
-			</div>	
-		</div>
-		
-
-	</body>
+			<p>. . .</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+			<p>ice cream</p>
+			<img src="img/home-pic1.png">
+			<img src="img/arrow-right 4.png">
+			<div></div>
+		</div>	
+	</div>
+</body>
 </html>
