the main page working 1.4

--- a/Group_work/index.html
+++ b/Group_work/index.html
@@ -41,22 +41,38 @@
 			<img class="main_content_ice_cream_img" src="img/slider-pic7 1.png">
 			<img class="main_content_milk_img" src="img/slider-pic5 1.png">
 			<p class="text_Lorem_ipsum_dolor">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-			<<a href="#"><img class="main_content_arrow_img" src="img/arrow-right 3.png"></a>
+			<a href="#"><img class="main_content_arrow_img" src="img/arrow-right 3.png"></a>
 			<img class="main_content_girl_img" src="img/slider-pic4 1.png">
 		</div>
 	</div>
 	<div>
-		<div>
-			<p>100% natural</p>
-			<p>products</p>
+		<div class="div_natural_products">
+			<p class="text_natural">100% natural</p>
+			<p class="text_products">products</p>
 		</div>
-		<div>
-			<p>. . .</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-			<p>ice cream</p>
-			<img src="img/home-pic1.png">
-			<img src="img/arrow-right 4.png">
-			<div></div>
+		<div class="div_ice_cream">
+            <div class="background_ice_cream"></div>
+			<img class="img_ice_cream" src="img/home-pic1.png">
+            <p class="text_ice_cream">ice cream</p>
+			<img class="ice_cream_three_points" src="img/Group 4.png">
+			<p class="text_Lorem_ipsum_dolor_sit">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+			<a href="#"><img class="arrow_ice_cream" src="img/arrow-right 4.png"></a>
+		</div>
+        <div class="div_ice_coffee">
+            <div class="background_ice_coffee"></div>
+			<img class="img_ice_coffee" src="img/home-pic2.png">
+            <p class="text_ice_coffee">ice coffee</p>
+			<img class="ice_coffee_three_points" src="img/Group 4.png">
+			<p class="ice_coffee_text_Lorem_ipsum_dolor_sit">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+			<a href="#"><img class="arrow_ice_coffee" src="img/arrow-right 4.png"></a>
+		</div>
+        <div class="div_milkshakes">
+            <div class="background_milkshakes"></div>
+			<img class="img_milkshakes" src="img/home-pic3.png">
+            <p class="text_milkshakes">milkshakes</p>
+			<img class="milkshakes_three_points" src="img/Group 4.png">
+			<p class="milkshakes_text_Lorem_ipsum_dolor_sit">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+			<a href="#"><img class="arrow_milkshakes" src="img/arrow-right 4.png"></a>
 		</div>	
 	</div>
 </body>
