the main page working 1.5

--- a/Group_work/index.html
+++ b/Group_work/index.html
@@ -26,7 +26,7 @@
 		<div class="main_content">
 			<p class="ice_cream_made_with">ice cream made with<span class="passion"><br>passion</span></p>
 			<a href="#"><div class="button_main_content_products"><span class="Products">Products</span></div></a>
-			<a href="#"><div class="button_main_content_making"><span class="How_its_made">How it’s made?</span></div></a>
+            <a href="#"><div class="button_main_content_making"><span class="How_its_made">How it’s made?</span></div></a>
 			<div class="div_cafes">
                 <div class="circle"></div>
 				<p class="p_16">16</p>
@@ -75,5 +75,118 @@
 			<a href="#"><img class="arrow_milkshakes" src="img/arrow-right 4.png"></a>
 		</div>	
 	</div>
+    <div>
+        <div class="div_how_its_made_background"></div>
+        <div class="div_text_how_its_made">
+            <p class="text_tradition_and_love">tradition and love</p>
+            <p class="text_how_its_made">how it’s made?</p>
+        </div>
+        <img src="img/sectionbg1 1.png" class="img_background_milk">
+        <img src="img/home-pic4 1.png" class="img_bio_eco">
+        <p class="text_Fusce_ut_velit_laoreet">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</p>
+        <p class="text_Curabitur_lacinia_enim">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.
+
+
+            Aliquam erat volutpat. Aenean accumsan.</p>
+        <a href="#"><div class="button_Read_more"><span class="button_Read_more_text">Read more ></span></div></a>
+        <div class="div_721">
+            <img src="img/icon1.png" class="img_icon1">
+            <p class="text_721">721</p>
+            <p class="text_Aliquam">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+        </div>
+        <div class="div_16kg">
+            <img src="img/icon2.png" class="img_icon2">
+            <p class="text_16kg">16kg</p>
+            <p class="text_Aliquam_ac">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+        </div>
+        <div class="div_84">
+            <img src="img/icon3.png" class="img_icon3">
+            <p class="text_84">84</p>
+            <p class="text_Aliquam_ac_dui">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+        </div>
+    </div>
+    <img src="img/home-pic5 1.png" class="home-pic5">
+    <div class="div_reviews">
+        <img src="img/testimonials1 1.png" class="img_Emily">
+        <div class="reviews_background">
+            <img src="img/“.png" class="reviews_inverted_commas">
+            <p class="reviews_text_Emily">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</p>
+            <hr class="reviews_hr_1"><hr class="reviews_hr_2">
+        </div>
+        <img src="img/Group 8.png" class="reviews_three_points">
+        <p class="reviews_information_about_the_user_Emily">Emily, Los Angeles</p>
+        <img src="img/hr dots.png" class="reviews_hr_dots_Emily">
+    </div>
+    <div>
+        <div class="background_footer"></div>
+        <img src="img/sectionbg2 1.png" class="img_sectionbg2_1">
+        <div class="background_CAFE">
+            <div class="div_CAFE">
+                <div class="div_CAFE_text">
+                    <p class="text_CAFE">CAFE</p>
+                </div>
+                <div class="div_Chicago">
+                    <p class="text_Chicago">Chicago</p>
+                    <p class="text_Chicago_Fusce_ut_velit">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                </div>
+                <hr class="hr_CAFE_1">
+                <div class="working_days_CAFE">
+                    <p class="text_Monday_Friday">Monday - Friday</p>
+                    <p class="opening_hours_on_weekdays">06:00 AM - 10:00 PM</p>
+                    <p class="text_Saturday_Sunday">Saturday - Sunday</p>
+                    <p class="opening_hours_on_weekends">08:00 AM - 16:00 PM</p>
+                </div>
+                <hr class="hr_CAFE_2">
+                <p class="phone_and_email_CAFE">+61(0) 383 766 284 noreply@envato.com</p>
+            </div>
+        </div>
+        <div class="background_FOOD_TRUCK">
+            <div class="div_FOOD_TRUCK">
+                <div class="div_FOOD_TRUCK_text">
+                    <p class="text_FOOD_TRUCK">FOOD TRUCK</p>
+                </div>
+                <div class="div_Los_Angeles">
+                    <p class="text_Los_Angeles">Los Angeles</p>
+                    <p class="text_Los_Angeles_Fusce_ut_velit">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                </div>
+                <hr class="hr_FOOD_TRUCK_1">
+                <div class="working_days_FOOD_TRUCK">
+                    <p class="text_Monday_Friday">Monday - Friday</p>
+                    <p class="opening_hours_on_weekdays">06:00 AM - 10:00 PM</p>
+                    <p class="text_Saturday_Sunday">Saturday - Sunday</p>
+                    <p class="opening_hours_on_weekends">08:00 AM - 16:00 PM</p>
+                </div>
+                <hr class="hr_FOOD_TRUCK_2">
+                <p class="phone_and_email_FOOD_TRUCK">+61(0) 383 766 284 noreply@envato.com</p>
+            </div>
+        </div>
+        <div class="background_CAFE_2">
+            <div class="div_CAFE">
+                <div class="div_CAFE_text">
+                    <p class="text_CAFE">CAFE</p>
+                </div>
+                <div class="div_Chicago">
+                    <p class="text_Chicago">New York</p>
+                    <p class="text_Chicago_Fusce_ut_velit">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                </div>
+                <hr class="hr_CAFE_1">
+                <div class="working_days_CAFE">
+                    <p class="text_Monday_Friday">Monday - Friday</p>
+                    <p class="opening_hours_on_weekdays">06:00 AM - 10:00 PM</p>
+                    <p class="text_Saturday_Sunday">Saturday - Sunday</p>
+                    <p class="opening_hours_on_weekends">08:00 AM - 16:00 PM</p>
+                </div>
+                <hr class="hr_CAFE_2">
+                <p class="phone_and_email_CAFE">+61(0) 383 766 284 noreply@envato.com</p>
+            </div>
+        </div>
+        <a href="#"><div class="button_Our_Locations"><span class="button_Our_Locations_text">Our Locations ></span></div></a>     
+        <a href="#"><div class="button_Franchise"><span class="button_Franchise_text">Franchise ></span></div></a>
+    </div>
+    <div>
+       <footer class="footer">
+        
+       </footer> 
+    </div>
 </body>
 </html>
