working on the footer of the page

--- a/Group_work/index.html
+++ b/Group_work/index.html
@@ -185,8 +185,21 @@
     </div>
     <div>
        <footer class="footer">
-        
-       </footer> 
+            <div class="div_homemade_ice_cream_made">
+                <p class="text_homemade_ice_cream_made">homemade ice cream made </p>
+                <p class="text_with_passion">with passion</p>
+            </div>
+            <div class="div_social_media">
+                <a href="#"><img src="img/github.png" class="img_github"></a>
+                <a href="#"><img src="img/telegram.png" class="img_telegram"></a>
+                <a href="#"><img src="img/facebook.png" class="img_facebook"></a>
+            </div>
+            <p class="text_Feel_free_to_contact">Feel free to contact <span class="phone_number">+61 (0) 383 766 284</span></p> 
+            <div class="div_hr_homemade_ice_cream_made">
+                <hr class="hr_homemade_ice_cream_made">
+            </div>
+            <p class="text_All_Rights_Reserved">© 2019 - IceCream. All Rights Reserved. </p>
+        </footer> 
     </div>
 </body>
 </html>
