work on animation

--- a/Group_work/index.html
+++ b/Group_work/index.html
@@ -15,11 +15,11 @@
 			<img class="logo_img" src="img/logo 1.png">
 			<nav class="navbar">
 				<ul>
-					<a href="#" class="nav-link"><li class="li_home nav-item">Home</li></a>
+					<a href="index.html" class="nav-link"><li class="li_home nav-item">Home</li></a>
 					<a href="#" class="nav-link"><li class="nav-item li_about_us">About us</li></a>
-					<a href="#" class="nav-link"><li class="nav-item li_making">How it's made?</li></a>
+					<a href="#how_its_made" class="nav-link"><li class="nav-item li_making">How it's made?</li></a>
 					<a href="#" class="nav-link"><li class="nav-item li_products">Our products</li></a>
-					<a href="#" class="nav-link"><li class="nav-item li_contact">Contact</li></a>
+					<a href="#contact" class="nav-link"><li class="nav-item li_contact">Contact</li></a>
 				</ul>
 			</nav>
             <div class="menu-toggle">
@@ -31,8 +31,8 @@
 		</header>
 		<div class="main_content">
 			<p class="ice_cream_made_with">ice cream made with<span class="passion"><br>passion</span></p>
-			<a href="#"><div class="button_main_content_products"><span class="Products">Products</span></div></a>
-            <a href="#"><div class="button_main_content_making"><span class="How_its_made">How it’s made?</span></div></a>
+			<a href="#products"><div class="button_main_content_products"><span class="Products">Products</span></div></a>
+            <a href="#how_its_made"><div class="button_main_content_making"><span class="How_its_made">How it’s made?</span></div></a>
 			<div class="div_cafes">
                 <div class="circle"></div>
 				<p class="p_16">16</p>
@@ -53,7 +53,7 @@
 	</div>
 	<div>
 		<div class="div_natural_products">
-			<p class="text_natural">100% natural</p>
+			<p id="products" class="text_natural">100% natural</p>
 			<p class="text_products">products</p>
 		</div>
 		<div class="div_ice_cream">
@@ -84,7 +84,7 @@
     <div>
         <div class="div_how_its_made_background"></div>
         <div class="div_text_how_its_made">
-            <p class="text_tradition_and_love">tradition and love</p>
+            <p id="how_its_made" class="text_tradition_and_love">tradition and love</p>
             <p class="text_how_its_made">how it’s made?</p>
         </div>
         <img src="img/sectionbg1 1.png" class="img_background_milk">
@@ -193,7 +193,7 @@
     <div>
        <footer class="footer">
             <div class="div_homemade_ice_cream_made">
-                <p class="text_homemade_ice_cream_made">homemade ice cream made </p>
+                <p id="contact" class="text_homemade_ice_cream_made">homemade ice cream made </p>
                 <p class="text_with_passion">with passion</p>
             </div>
             <div class="div_social_media">
@@ -208,6 +208,7 @@
             <p class="text_All_Rights_Reserved">© 2019 - IceCream. All Rights Reserved. </p>
         </footer> 
     </div>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
+    <!-- <script src="js/bootstrap.js"></script> -->
 </body>
 </html>
